--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,22 @@
 version: "3.8"
 
-
 services:
+  client:
+    image: node:18.7.0-slim
+    tty: true
+    ports:
+      - 8082:8082
+    working_dir: /app
+    volumes:
+      - ./todo-client:/app
+
   app:
     image: maven:3.9-eclipse-temurin-17-alpine
     restart: always
     ports:
       - 8081:8081
     working_dir: /app
-    command: ["mvn", "clean", "spring-boot:run"]
+    command: [ "mvn", "clean", "spring-boot:run" ]
     volumes:
       - ./todo-rest:/app
     depends_on:
@@ -23,7 +31,7 @@ services:
     environment:
       POSTGRES_PASSWORD: postgres
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -38,7 +46,6 @@ services:
     depends_on:
       db:
         condition: service_healthy
-
 
 volumes:
   data:
