--- a/todo-rest/pom.xml
+++ b/todo-rest/pom.xml
@@ -41,6 +41,11 @@
 			<artifactId>spring-web</artifactId>
 			<version>6.0.11</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
