--- a/todo-rest/src/main/resources/application.properties
+++ b/todo-rest/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8081
 
+management.endpoints.web.exposure.include=info,health
+
 spring.datasource.url=jdbc:postgresql://db:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
