--- a/dev.yml
+++ b/dev.yml
@@ -20,6 +20,8 @@ services:
     user: "1000:1000"
     entrypoint: ["sh"]
     tty: true
+    environment:
+      POSTGRES_DB: todo_db
     ports:
       - 8081:8081
     working_dir: /app
@@ -35,6 +37,7 @@ services:
     image: postgres:15.3-alpine3.18
     restart: always
     environment:
+      POSTGRES_DB: todo_db
       POSTGRES_PASSWORD: postgres
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
