--- a/dev.yml
+++ b/dev.yml
@@ -3,6 +3,7 @@ version: "3.8"
 services:
   client:
     image: node:18.7.0-slim
+    container_name: dev-todo-client
     restart: always
     user: "1000:1000"
     tty: true
@@ -16,12 +17,14 @@ services:
 
   rest:
     image: maven:3.9-eclipse-temurin-17-alpine
+    container_name: dev-todo-rest
     restart: always
     user: "1000:1000"
     entrypoint: ["sh"]
     tty: true
     environment:
       POSTGRES_DB: todo_db
+      SPRING_PROFILES_ACTIVE: dev
     ports:
       - 8081:8081
     working_dir: /app
@@ -35,6 +38,7 @@ services:
 
   db:
     image: postgres:15.3-alpine3.18
+    container_name: dev-todo-db
     restart: always
     environment:
       POSTGRES_DB: todo_db
@@ -51,6 +55,7 @@ services:
 
   adminer:
     image: adminer
+    container_name: dev-todo-adminer
     ports:
       - 8080:8080
     depends_on:
