Add prod stages for client & rest Dockerfiles

--- a/prod.yml
+++ b/prod.yml
@@ -2,50 +2,53 @@ version: "3.8"
 
 services:
   client:
-    image: test-todo-client-image:latest
+    image: prod-todo-client-image:latest
     build:
       context: todo-client
-      target: builder
-    container_name: test-todo-client
+      target: prod
+    container_name: prod-todo-client
     restart: always
     ports:
-      - 3002:3002
+      - 80:80
     depends_on:
       rest:
         condition: service_healthy
     networks:
-      - test-todo-net
+      - prod-todo-net
     environment:
-      VITE_PORT: 3002
+      VITE_PORT: 80
       VITE_REST_URL: "http://3.73.37.21:8081"
 
   rest:
-    image: test-todo-rest-image:latest
+    image: prod-todo-rest-image:latest
     build:
       context: todo-rest
-      target: builder
-    container_name: test-todo-rest
+      target: prod
+    container_name: prod-todo-rest
     restart: always
     healthcheck:
       test:
-        ["CMD-SHELL", "curl -f http://localhost:8081/actuator/health || exit 1"]
+        [
+          "CMD-SHELL",
+          "wget --spider --quiet http://localhost:8081/actuator/health || exit 1",
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
     environment:
       POSTGRES_DB: todo_db
-      SPRING_PROFILES_ACTIVE: test
+      SPRING_PROFILES_ACTIVE: prod
     ports:
       - 8081:8081
     depends_on:
       db:
         condition: service_healthy
     networks:
-      - test-todo-net
+      - prod-todo-net
 
   db:
     image: postgres:15.3-alpine3.18
-    container_name: test-todo-db
+    container_name: prod-todo-db
     restart: always
     environment:
       POSTGRES_DB: todo_db
@@ -56,11 +59,11 @@ services:
       timeout: 5s
       retries: 5
     volumes:
-      - test-db-data:/var/lib/postgresql/data
+      - prod-db-data:/var/lib/postgresql/data
     networks:
-      - test-todo-net
+      - prod-todo-net
 
 volumes:
-  test-db-data:
+  prod-db-data:
 networks:
-  test-todo-net:
+  prod-todo-net:
