--- a/dev.yml
+++ b/dev.yml
@@ -14,6 +14,8 @@ services:
       - ./todo-client:/app
     networks:
       - dev-todo-net
+    environment:
+      - VITE_REST_URL: http://localhost:8081
 
   rest:
     image: maven:3.9-eclipse-temurin-17-alpine
