--- a/test.yml
+++ b/test.yml
@@ -15,6 +15,8 @@ services:
         condition: service_healthy
     networks:
       - test-todo-net
+    environment:
+      - VITE_REST_URL: http://localhost:8081
 
   rest:
     image: test-todo-rest-image:latest
