--- a/test.yml
+++ b/test.yml
@@ -15,8 +15,6 @@ services:
         condition: service_healthy
     networks:
       - test-todo-net
-    environment:
-      - VITE_REST_URL: http://localhost:8081
 
   rest:
     image: test-todo-rest-image:latest
@@ -27,15 +25,16 @@ services:
     restart: always
     healthcheck:
       test:
-        ["CMD-SHELL", "curl -f http://localhost:8081/actuator/health || exit 1"]
+        [
+          "CMD-SHELL",
+          "wget --spider --quiet http://localhost:8081/actuator/health || exit 1",
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
     environment:
       POSTGRES_DB: todo_db
       SPRING_PROFILES_ACTIVE: test
-    ports:
-      - 8081:8081
     depends_on:
       db:
         condition: service_healthy
