--- a/todo-client/Dockerfile
+++ b/todo-client/Dockerfile
@@ -19,3 +19,5 @@ RUN ["npm", "run", "build"]
 FROM nginx:1.25.1-alpine AS prod
 
 COPY --from=build-prod /code/dist /usr/share/nginx/html
+
+COPY nginx.conf /etc/nginx/conf.d/default.conf
