--- a/prod.yml
+++ b/prod.yml
@@ -17,6 +17,8 @@ services:
       - prod-todo-net
     environment:
       VITE_PORT: 80
+    volumes:
+      - /home/ubuntu/.htpasswd:/etc/nginx/.htpasswd
 
   rest:
     image: prod-todo-rest-image:latest
