--- a/todo-client/nginx.conf
+++ b/todo-client/nginx.conf
@@ -5,6 +5,9 @@ server {
 
     #access_log  /var/log/nginx/host.access.log  main;
 
+    auth_basic "Restricted Content";
+    auth_basic_user_file /etc/nginx/.htpasswd;
+
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
