--- a/todo-client/nginx.conf
+++ b/todo-client/nginx.conf
@@ -1,7 +1,14 @@
 server {
-    listen       80;
-    listen  [::]:80;
-    server_name  localhost;
+    listen 80;
+    server_name todo.jlinden.net;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name  todo.jlinden.net;
+    ssl_certificate /etc/nginx/ssl/live/todo.jlinden.net/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/todo.jlinden.net/privkey.pem;
 
     #access_log  /var/log/nginx/host.access.log  main;
 
