--- a/prod.yml
+++ b/prod.yml
@@ -19,7 +19,7 @@ services:
       VITE_PORT: 80
     volumes:
       - /home/ubuntu/.htpasswd:/etc/nginx/.htpasswd
-      - /etc/letsencrypt/live/todo.jlinden.net:/etc/nginx/ssl/live/todo.jlinden.net
+      - /etc/letsencrypt/live/jlinden.net:/etc/nginx/ssl/live/todo.jlinden.net
 
   rest:
     image: prod-todo-rest-image:latest
